--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
     "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
