--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts": "^5.3.0",
     "element-ui": "^2.15.6",
     "nprogress": "^0.2.0",
+    "pubsub-js": "^1.9.4",
     "qs": "^6.10.3",
     "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
